Use CSS float left to prevent edit buttons on picture pushing picture description out of visible frame

--- a/oldalbum.web.frontend/src/main/frontend/src/App.css
+++ b/oldalbum.web.frontend/src/main/frontend/src/App.css
@@ -125,3 +125,7 @@
 .oldalbum-modal {
     z-index: 10000;
 }
+
+.edit-buttons {
+    float: left;
+}
